index-file should be ok now

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -20,7 +20,7 @@
     </form>
 
     <h2>List:</h2>
-    <ul id="todolist">
+    <ul id="shoppinglist">
     </ul>
 
     <script src="todojs.js"></script>
