--- a/Project1/index.html
+++ b/Project1/index.html
@@ -6,7 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="todostyles.css">
 </head>
-<body>
+<body onload="return onLoad()">
 
     <h1>Shopping list</h1>
     <form action="" name="todoform" onsubmit="return addToList()">
