--- a/WS6.html
+++ b/WS6.html
@@ -17,82 +17,204 @@ table, tr, td{
 
 </style>
 
-<script>
 
-
-}
-
-</script>
 <!-- exercise #2 -->
 
-<body onload="">
+<body onload="return onLoad()">
 
-<h1>Workshop 6: Using Localstorage</h1>
-<hr />
-<h2>Exercise 1: Saving the entered data</h2>
-<p>Use localstorage to save the data entered to the form fields below. The JavaScript code 
-should read the values entered when the user clicks the button and save the data into 
-localstorage. Use Developer Tools to study what data is saved and how. You can even try to 
-modify this data using the developer tools.</p>
+    <h1>Workshop 6: Using Localstorage</h1>
+    <hr />
+    <h2>Exercise 1: Saving the entered data</h2>
+    <p>
+        Use localstorage to save the data entered to the form fields below. The JavaScript code
+        should read the values entered when the user clicks the button and save the data into
+        localstorage. Use Developer Tools to study what data is saved and how. You can even try to
+        modify this data using the developer tools.
+    </p>
 
-<p>
-  <label for="textfield">Destination:</label>
-  <input type="text" name="textfield" id="destination">
-  <br>
-  <label for="textfield">Arrival Date:</label>
-  <input type="text" name="textfield" id="arrival">
-  <br>
-  <div id="services">
-  Services:
-  <label>
-    <br>
-    <input type="checkbox" name="CheckboxGroup1" value="Internet" 
-id="CheckboxGroup1_0">
-  Internet</label>
-  <br>
-  <label>
-    <input type="checkbox" name="CheckboxGroup1" value="AC" id="CheckboxGroup1_1">
-    Air Conditioning</label>
-  <br>
-  <label>
-    <input type="checkbox" name="CheckboxGroup1" value="minibar" 
-id="CheckboxGroup1_2">
-    Minibar</label>
-  <br>
-  <label>
-    <input type="checkbox" name="CheckboxGroup1" value="car" id="CheckboxGroup1_3">
-    Car rent</label>
-  <br>
-  <label>
-    <input type="checkbox" name="CheckboxGroup1" value="sauna" 
-id="CheckboxGroup1_4">
-    Sauna 
-</label>
+    <p>
+        <label for="textfield">Destination:</label>
+        <input type="text" name="textfield" id="destination">
+        <br>
+        <label for="textfield">Arrival Date:</label>
+        <input type="text" name="textfield" id="arrival">
+        <br>
+        <div id="services">
+            Services:
+            <br>
+            <label>
+                <input type="checkbox" name="CheckboxGroup1" value="Internet" id="CheckboxGroup1_0">
+                Internet
+            </label>
+            <br>
+            <label>
+                <input type="checkbox" name="CheckboxGroup1" value="AC" id="CheckboxGroup1_1">
+                Air Conditioning
+            </label>
+            <br>
+            <label>
+                <input type="checkbox" name="CheckboxGroup1" value="minibar" id="CheckboxGroup1_2">
+                Minibar
+            </label>
+            <br>
+            <label>
+                <input type="checkbox" name="CheckboxGroup1" value="car" id="CheckboxGroup1_3">
+                Car rent
+            </label>
+            <br>
+            <label>
+                <input type="checkbox" name="CheckboxGroup1" value="sauna" id="CheckboxGroup1_4">
+                Sauna
+            </label>
+        </div>
+    </p>
+    <p>
+        <input type="button" name="button" id="button" value="Reserve" onclick="return saveLocalData()">
+    </p>
+    <p>
+        <br>
+    </p>
+    <p>&nbsp;</p>
+    <h2>Exercise 2: Reloading the saved data</h2>
+    <p>
+        After you have managed to save some data to a localstorage, its time to utilize it. Add a
+        piece of code to this page, which will check if there is saved data available from the first
+        assignment, and load them into a div with an id="sessionData". This should happen when the
+        page is loaded, because we want the data to be loaded then as well. HINT: use onLoad -
+        event on the body tag.
+    </p>
+    <div id="sessiondata">Session data goes here!</div>
+    <h2>Exercise 3: Sessionstorage vs. localstorage</h2>
+    <p>
+        Compare sessionstorage and localstorage. Think of a few examples on where each
+        should be used. Copy the form above here and implement sessionstorage for it. See what
+        happens, when you close the browser. You can utilize developer tools to study the data (F12,
+        select Application tab, then LocalStorage on the left).
+    </p>
 
-</p>
-</div>	
-<p>
-  <input type="button" name="button" id="button" value="Reserve" onclick="getData()">
-</p>
-<p><br>
-</p>
-<p>&nbsp;</p>
-<h2>Exercise 2: Reloading the saved data</h2>
-<p>After you have managed to save some data to a localstorage, its time to utilize it. Add a 
-piece of code to this page, which will check if there is saved data available from the first 
-assignment, and load them into a div with an id="sessionData". This should happen when the 
-page is loaded, because we want the data to be loaded then as well. HINT: use onLoad -
-event on the body tag.</p>
-<div id="sessiondata">Session data goes here!</div>
-<h2>Exercise 3: Sessionstorage vs. localstorage</h2>
-<p>Compare sessionstorage and localstorage. Think of a few examples on where each 
-should be used. Copy the form above here and implement sessionstorage for it. See what 
-happens, when you close the browser. You can utilize developer tools to study the data (F12, 
-select Application tab, then LocalStorage on the left).</p>
-<h2>Exercise 4:</h2>
-<p>Try to add localstorage features to your project work. This means, that todo-list for 
-example, would remember the data that you have entered between browser refresh and even 
-restarts.</p>
+    <p>
+        <label for="textfield">Destination:</label>
+        <input type="text" name="textfield" id="destination1">
+        <br>
+        <label for="textfield">Arrival Date:</label>
+        <input type="text" name="textfield" id="arrival1">
+        <br>
+        <div id="services1">
+            Services:
+            <br>
+            <label>
+                <input type="checkbox" name="CheckboxGroup1" value="Internet" id="CheckboxGroup1_01">
+                Internet
+            </label>
+            <br>
+            <label>
+                <input type="checkbox" name="CheckboxGroup1" value="AC" id="CheckboxGroup1_11">
+                Air Conditioning
+            </label>
+            <br>
+            <label>
+                <input type="checkbox" name="CheckboxGroup1" value="minibar" id="CheckboxGroup1_21">
+                Minibar
+            </label>
+            <br>
+            <label>
+                <input type="checkbox" name="CheckboxGroup1" value="car" id="CheckboxGroup1_31">
+                Car rent
+            </label>
+            <br>
+            <label>
+                <input type="checkbox" name="CheckboxGroup1" value="sauna" id="CheckboxGroup1_41">
+                Sauna
+            </label>
+        </div>
+    </p>
+
+    <p>
+        <input type="button" name="button" id="button" value="Reserve" onclick="return saveSessionData()">
+    </p>
+
+    <h2>Exercise 4:</h2>
+    <p>
+        Try to add localstorage features to your project work. This means, that todo-list for
+        example, would remember the data that you have entered between browser refresh and even
+        restarts.
+    </p>
+
+    <script>
+
+        var db = openDatabase("mydb", "1.0", "my first database", 2 * 1024 * 1024);
+
+        db.transaction(function (tx) {
+            tx.executeSql('CREATE TABLE IF NOT EXISTS foo (id unique, text)');
+
+            tx.executeSql('INSERT INTO foo (id, text) VALUES (1, "synergies")');
+        });
+
+        function saveLocalData() {
+            if (typeof (Storage) !== "undefined") {
+                console.log("storage supported");
+            } else {
+                console.log("storage unsupported");
+                return false;
+            }
+
+            var dest = document.getElementById("destination").value.toString();
+            var arr = document.getElementById("arrival").value.toString();
+
+            var internet = document.getElementById("CheckboxGroup1_0").checked;
+            var ac = document.getElementById("CheckboxGroup1_1").checked;
+            var minibar = document.getElementById("CheckboxGroup1_2").checked;
+            var car = document.getElementById("CheckboxGroup1_3").checked;
+            var sauna = document.getElementById("CheckboxGroup1_4").checked;
+
+
+            var form = { "destination": dest, "arrival": arr, "internet": internet, "air conditioning": ac, "minibar": minibar, "car rent": car, "sauna": sauna };
+            var formjson = JSON.stringify(form, null, " ");
+
+            localStorage.setItem("form", formjson);
+
+            console.log(form);
+        }
+
+        function saveSessionData() {
+            if (typeof (Storage) !== "undefined") {
+                console.log("storage supported");
+            } else {
+                console.log("storage unsupported");
+                return false;
+            }
+
+            var dest = document.getElementById("destination1").value.toString();
+            var arr = document.getElementById("arrival1").value.toString();
+
+            var internet = document.getElementById("CheckboxGroup1_01").checked;
+            var ac = document.getElementById("CheckboxGroup1_11").checked;
+            var minibar = document.getElementById("CheckboxGroup1_21").checked;
+            var car = document.getElementById("CheckboxGroup1_31").checked;
+            var sauna = document.getElementById("CheckboxGroup1_41").checked;
+
+
+            var form = { "destination": dest, "arrival": arr, "internet": internet, "air conditioning": ac, "minibar": minibar, "car rent": car, "sauna": sauna };
+            var formjson = JSON.stringify(form, null, " ");
+
+            sessionStorage.setItem("form", formjson);
+
+            console.log(form);
+        }
+
+        function onLoad() {
+            if (localStorage.length > 0) {
+                console.log("storage has elements");
+            } else {
+                console.log("storage is empty");
+                return false;
+            }
+
+            var targetDiv = document.getElementById("sessiondata");
+            targetDiv.innerHTML = localStorage.getItem("form");
+        }
+
+    </script>
 </body>
 
 </html>
