--- a/Project2/index.html
+++ b/Project2/index.html
@@ -17,18 +17,10 @@
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <input class="form-control mr-sm-2" id="searchbar" type="text" placeholder="Search">
         <button class="btn bg-light" type="submit" onclick="search()">Search</button>
-        <button class="btn bg-light" type="submit" onclick="getArtistPage(this)">Test</button>
-        <!--<a class="navbar-brand" href="#">Navbar</a>-->
+        <!--<button class="btn bg-light" type="submit" onclick="getArtistPage(this)">Test</button>-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <!--<li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>-->
-            </ul>
-        </div>
     </nav>
 
     <div id="tagInfo">
@@ -141,7 +133,7 @@
 
         <div class="container" style="margin-top:30px; margin-bottom:30px;">
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-12">
                     <h2 id="trackHeadline"></h2>
                     <div id="trackBio"></div>
 
@@ -149,19 +141,6 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-sm-12">
-                    <h2 id="topAlbumsHeadline"></h2>
-                    <div id="topAlbums"></div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-12">
-                    <!--<h2 id="trackListingHeadline"></h2>
-                    <div id="trackListing"></div>-->
-                </div>
-            </div>
         </div>
 
     </div>
