Project 2 complete (atleast for now)

--- a/Project2/index.html
+++ b/Project2/index.html
@@ -21,6 +21,9 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
+
+        <button type="button" class="btn btn-primary" onclick="backward()">Backward</button>
+        <button type="button" class="btn btn-secondary" onclick="forward()">Forward</button>
     </nav>
 
     <div id="tagInfo">
@@ -179,7 +182,7 @@
                 </div>
 
                 <div class="col-sm-4">
-                    <h2 id="trackSearcHeadline"></h2>
+                    <h2 id="trackSearchHeadline"></h2>
                     <div class="row">
 
                         <div class="col-sm-6">
@@ -201,7 +204,7 @@
     </div>
 
     <div class="jumbotron text-center" style="margin-bottom:0">
-        <p>Ayyyy</p>
+        <p>Useless footer but it looks better with some text on it</p>
     </div>
 
     <script src="database.js"></script>
